[gd_scene load_steps=3 format=3 uid="uid://12wxamserfhi"]

[ext_resource type="Texture2D" uid="uid://c13ro651jafw0" path="res://Assets/Sprites/sGun.png" id="1_1ssmi"]
[ext_resource type="Script" path="res://Scripts/wand.gd" id="1_3jpyo"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_3jpyo")

[node name="WandSprite" type="Sprite2D" parent="."]
texture = ExtResource("1_1ssmi")
offset = Vector2(16, 0)

[node name="CooldownTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="WandPoint" type="Marker2D" parent="."]
position = Vector2(32, 0)

[connection signal="timeout" from="CooldownTimer" to="." method="_on_cooldown_timer_timeout"]
